add_executable(exporter-test
        exporter-test.cxx
        BDEMessageTest.cxx
        Epa4AllTransformerTest.cxx
        Epa4AllTransformerGematikTestdata.cxx
        TRezeptTransformerTest.cxx
        admin/AdminRequestHandlerTest.cxx
        admin/PutRuntimeConfigHandlerTest.cxx
        database/CommitGuardTest.cxx
        database/PostgresDatabaseTest.cxx
        database/TaskEventConverterTest.cxx
        eventprocessing/CancelPrescriptionTest.cxx
        eventprocessing/ProvideDispensationTest.cxx
        eventprocessing/ProvidePrescriptionTest.cxx
        fhir/DeGematikErpT-PrescriptionTest.cxx
        fhir/FhirRepositoryTest.cxx
        mock/EpaAccountLookupClientMock.cxx
        mock/EpaAccountLookupMock.cxx
        mock/EpaMedicationClientMock.cxx
        mock/FhirVZDClientMock.cxx
        mock/MedicationExporterDatabaseFrontendMock.cxx
        model/ConsentDecisionResponseTypeTest.cxx
        model/HealthcareServiceDirectoryTest.cxx
        pc/MedicationExporterServiceContextTest.cxx
        util/MedicationExporterStaticData.cxx
        EpaAccountLookupTest.cxx
        EventProcessorTest.cxx
        ExporterConfigurationTest.cxx
        VauAutTokenSignerTest.cxx
        TRezeptEventProcessorTest.cxx
        TelematikLookupTest.cxx
        it/EpaAccountLookupIt.cxx
        FhirVZDClientTest.cxx
)

target_link_libraries(
    exporter-test
        erp-medication-exporter-files
        erp-shared
        erp-processing-context-files
        erp-hsm-tpm-mock
        erp-test-util-lib
        GTest::gmock
)
